# sl

./: .gitignore  LICENSE  README.md
.github/workflows/: cmake.yml
sl/core/: access.hpp  avoid_property.hpp  basic.hpp  binary_serialize.h  binary_serialize.hpp  helper.h  helper.hpp  io_interface.h  json_serializer.h  json_serializer.hpp  macros.h  macros.hpp  pointer_saver.h  pointer_saver.hpp  text_impl.h  text_impl.hpp  text_serializer.h  text_serializer.hpp  to_value.h  to_value.hpp  xml_serializer.h  xml_serializer.hpp
sl/core/json/: helper.h  helper.hpp  helper_fundamental.h  helper_fundamental.hpp  helper_map.h  helper_map.hpp  helper_tuple.h  helper_tuple.hpp  helper_vector.h  helper_vector.hpp
sl/macros/: BITAND.h  BOOL.h  CAT.h  CHECK.h  COMPL.h  DEC.h  EAT.h  EQUAL.h  IIF.h  INC.h  IS_PAREN.h  NARG.h  NOT.h
sl/patterns/: singleton.hpp
sl/tools/: for_each.hpp  multi_container.hpp  zip.hpp
test/: CMakeLists.txt
test/framework/: helper.hpp
test/src/: main.cpp  test_env.hpp
test/tests/: serialize_common.hpp  test_environment_test.cpp  test_json.cpp  test_poly.cpp  test_ptr.cpp  test_simple_object.cpp  test_tools.cpp  test_user_functions.cpp
